// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cached template integration tests first clone with variable replacement should snapshot created directory structure 1`] = `
[
  "LICENSE",
  "README.md",
  "__tests__/",
  "__tests__/basic.test.ts",
  "jest.config.js",
  "package.json",
]
`;

exports[`cached template integration tests first clone with variable replacement should snapshot package.json files if they exist 1`] = `
{
  "package.json": {
    "author": "Test User test <tester-test@example.com>",
    "bugs": {
      "url": "https://github.com/tester-test/integration-test/issues",
    },
    "description": "Integration test module test",
    "devDependencies": {
      "makage": "0.1.9",
      "pgsql-test": "^2.18.15",
    },
    "homepage": "https://github.com/tester-test/integration-test",
    "keywords": [],
    "license": "MIT",
    "name": "integration-test",
    "publishConfig": {
      "access": "public",
      "directory": "dist",
    },
    "repository": {
      "type": "git",
      "url": "https://github.com/tester-test/integration-test",
    },
    "scripts": {
      "lint": "eslint . --fix",
      "test": "jest",
      "test:watch": "jest --watchAll",
    },
    "version": "0.0.1",
  },
}
`;

exports[`cached template integration tests second clone from cache should snapshot created directory structure from cache 1`] = `
[
  "LICENSE",
  "README.md",
  "__tests__/",
  "__tests__/basic.test.ts",
  "jest.config.js",
  "package.json",
]
`;

exports[`cached template integration tests second clone from cache should snapshot package.json files from cached template 1`] = `
{
  "package.json": {
    "author": "Test User cached <tester-cached@example.com>",
    "bugs": {
      "url": "https://github.com/tester-cached/integration-cached/issues",
    },
    "description": "Integration test module cached",
    "devDependencies": {
      "makage": "0.1.9",
      "pgsql-test": "^2.18.15",
    },
    "homepage": "https://github.com/tester-cached/integration-cached",
    "keywords": [],
    "license": "MIT",
    "name": "integration-cached",
    "publishConfig": {
      "access": "public",
      "directory": "dist",
    },
    "repository": {
      "type": "git",
      "url": "https://github.com/tester-cached/integration-cached",
    },
    "scripts": {
      "lint": "eslint . --fix",
      "test": "jest",
      "test:watch": "jest --watchAll",
    },
    "version": "0.0.1",
  },
}
`;
